19-springboot-restful/cicd/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-restful-service
  namespace: demo-spring
spec:
  selector:
    app: springboot-restful-service
  ports:
    - port: 80
      targetPort: 8080
