19-springboot-restful/cicd/5-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spring-restful-service-route
  namespace: demo-spring
spec:
  parentRefs:
    - name: demo-gateway
  hostnames:
    - api.localtest.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: springboot-restful-service
          port: 80
